Added text-white by default to fixed, large text for proper design effect

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <div class="relative text-center h-1/2 bg-gray-700 text-white"><button class="text-current absolute inset-0">Home</button></div><div class="relative text-center h-1/2 bg-blue-300"><button class="ripple text-current absolute inset-0" onclick="objWalk(this, [{7:'pN'},'cL']).remove('show')">close</button></div>
 </div><div class="sm:inline-block hidden h-full w-2/3 bg-gray-100"></div></div><div class="h-1/2 bg-yellow-100"></div>
 </div><div class="h-full w-1/2 bg-blue-100"></div></div><div class="h-1/2 bg-gray-100"></div></div><div class="relative w-1/2 h-full"><div class="no-hover no-focus tooltip slide bg-red-200 absolute inset-0 show" style="--x: 0%;"></div><div style="background-image: url(img/canyon.png)" class="absolute inset-0"></div><div class="relative h-full w-full" style="background: #00000095;"></div></div></div></nav>
-<h1 class="fixed precise-typo-1 top-1/2 sm:top-1/3 w-full text-center text-black">RZONE</h1><main class="text-center [&>*]:text-left">
+<h1 class="text-white fixed precise-typo-1 top-1/2 sm:top-1/3 w-full text-center text-black">RZONE</h1><main class="text-center [&>*]:text-left">
 
 <svg class="overflow-visible scene intro" width="1440" preserveAspectRatio="xMinYMid slice" viewBox="0 0 1440 800" xmlns:pathdata="http://www.codrops.com/">
 					<defs>
